--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.7.2
 Django==4.2.4
 django-cleanup==8.0.0
+django-bootstrap5==23.3
 Pillow==10.0.0
 psycopg2==2.9.7
 sqlparse==0.4.4
 tzdata==2023.3
+django-jazzmin==2.6.0
